k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: staging
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
