k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: staging
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
